# social_impact_eval_annotations_code

./: README.md
notebooks/: wmwm_avg_scores_graphs.ipynb  wmwm_rectangle_plots.ipynb  wmwm_time_series_plots.ipynb
regression/: Dockerfile  README.md  analyse_models.py  data_processing.py  diagnostics.py  model_builder.py  model_suite_configs.py  plotting.py  pyproject.toml  regression_model_presets.json  workflow_runner.py
regression/dags/: regression_models_dag.py
