[tool.poetry]
name = "eval-cards-regression"
version = "0.1.0"
description = "CLI utilities for hierarchical ordinal regression analysis."
authors = ["Eval Team <eval@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
arviz = "^0.17.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
patsy = "^0.5.6"
pymc = "5.25.1"
xarray = "^2024.3.0"
scipy = "^1.12.0"
numpyro = "^0.15.0"
nutpie = "^0.11.0"
jax = "^0.4.26"
jaxlib = "^0.4.26"
apache-airflow = "^2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
